--- a/doc/addons/std/functions/base64/page.mdx
+++ b/doc/addons/std/functions/base64/page.mdx
@@ -6,12 +6,12 @@ export const metadata = {
 # Standard Library Base64 Functions {{ id: "std-functions" }}
 
 
-## base64_decode {{ tag: 'function' }}
+## decode_base64 {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`base64_decode` decodes a base64 encoded string and returns the result as a hex string.
+`decode_base64` decodes a base64 encoded string and returns the result as a hex string.
 
 ### Inputs
 
@@ -35,12 +35,12 @@ export const metadata = {
 </Properties>
 
 
-<CodeGroup title="Example using base64_decode">
+<CodeGroup title="Example using decode_base64">
 
 
 ```hcl {{ title: 'main.tx' }}
 output "decoded" { 
-    value = base64_decode("SGVsbG8gd29ybGQh")
+    value = decode_base64("SGVsbG8gd29ybGQh")
 }
 > decoded: 0x48656c6c6f20776f726c6421
 
